--- a/_data/team.yml
+++ b/_data/team.yml
@@ -10,6 +10,7 @@
   
 - name: Fahri Husaini
   no-punggung: 3
+  pp: /assets/img/pp/fahri-husaini.jpg
   
 - name: K.MAL
   no-punggung: 5
@@ -55,6 +56,7 @@
   
 - name: Ozan
   no-punggung: 18
+  pp: /assets/img/pp/ozan.jpg
   
 - name: M.AJI Pangestu
   no-punggung: 19
