--- a/_data/team.yml
+++ b/_data/team.yml
@@ -5,6 +5,7 @@
   no-punggung: 1
   role: goalkeeper
   pp: /assets/img/pp/farhan-husaini.jpg
+  profile-link: /players/farhan-husaini
   
 - name: Ki
   no-punggung: 2
