--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,11 @@ author:
 collections:
   players:
     output: true
+defaults:
+  - scope:
+      path: ""
+      type: "players"
+    values:
+      layout: "player"
+      header: "header-player"
 version: 1.0.0
