--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,5 @@ defaults:
     values:
       layout: "match"
       header: "header-match"
+      image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3jXq0gzpnLc4bBAE_icBzU6q1nLlgZAmfXg&usqp=CAU
 version: 1.0.0
