--- a/_data/players.yml
+++ b/_data/players.yml
@@ -4,7 +4,7 @@
 - name: farhan husaini
   no-punggung: 1
   role: goalkeeper
-  pp: /assets/img/pp/farhan-husaini.jpg
+  pp: /assets/img/pp/farhan-husaini-bg-remove.png
   profile-link: /players/farhan-husaini
   
 - name: ki
