--- a/_data/players.yml
+++ b/_data/players.yml
@@ -115,6 +115,7 @@
 - name: aldo
   no-punggung: 23
   role: goalkeeper
+  pp: /assets/img/pp/aldo-bg-remove.png
   profile-link: /players/aldo
   
 - name: faisal
