--- a/_data/players.yml
+++ b/_data/players.yml
@@ -159,4 +159,5 @@
 - name: m.fajarr
   no-punggung: 98
   role: goalkeeper
+  pp: /assets/img/pp/m.fajarr-bg-remove.png
   profile-link: /players/m.fajarr
