--- a/_data/players.yml
+++ b/_data/players.yml
@@ -105,7 +105,7 @@
 - name: m.aji pangestu
   no-punggung: 19
   role: midfielder
-  pp: /assets/img/pp/m.aji-pangestu.jpg
+  pp: /assets/img/pp/m.aji-pangestu-bg-remove.png
   profile-link: /players/m.aji-pangestu
   
 - name: made
