--- a/_data/players.yml
+++ b/_data/players.yml
@@ -15,7 +15,7 @@
 - name: fahri husaini
   no-punggung: 3
   role: defender
-  pp: /assets/img/pp/fahri-husaini.jpg
+  pp: /assets/img/pp/fahri-husaini-bg-remove.png
   profile-link: /players/fahri-husaini
   
 - name: jafar
