--- a/_data/players.yml
+++ b/_data/players.yml
@@ -54,7 +54,7 @@
 - name: angga nugraha
   no-punggung: 9
   role: defender
-  pp: /assets/img/pp/angga-nugraha.jpg
+  pp: /assets/img/pp/angga-nugraha-bg-remove.png
   profile-link: /players/angga-nugraha
   
 - name: hgialfhri
