--- a/_data/players.yml
+++ b/_data/players.yml
@@ -43,6 +43,7 @@
 - name: a.mansyur
   no-punggung: 7
   role: forward
+  pp: /assets/img/pp/a.mansyur-bg-remove.png
   profile-link: /players/a.mansyur
   
 - name: danil ardiansyah
@@ -148,7 +149,7 @@
   
 - name: nyoy
   no-punggung: 78
-  role: goalkeeper
+  role: midfielder
   pp: /assets/img/pp/nyoy-bg-remove.png
   profile-link: /players/nyoy
   
