--- a/_data/players.yml
+++ b/_data/players.yml
@@ -60,7 +60,7 @@
 - name: a.mansyur
   no-punggung: 7
   role: forward
-  pp: /assets/img/pp/a.mansyur-bg-remove.png
+  pp: /assets/img/pp/a.mansyur-new.png
   profile-link: /players/a.mansyur
   
 - name: danil ardiansyah
