--- a/_data/partner.yml
+++ b/_data/partner.yml
@@ -1,9 +1,9 @@
 - name: pok merdeka cell
   img: /assets/img/POK.png
-  type: official sponsor
+  type: official partner
 - name: yeni sembako
   img: /assets/img/yeni-sembako.png
-  type: official sponsor
+  type: official partner
 - name: redline
   img: /assets/img/redline.png
   type: apparel
