--- a/_data/assets.yml
+++ b/_data/assets.yml
@@ -28,3 +28,7 @@ logo:
 photos:
   - name: full team
     img: /assets/img/tesafc-full-team-3.png
+  - name: jersey
+    img: /assets/img/home-jersey.jpg
+  - name: jersey
+    img: /assets/img/home-jersey_gk.jpg
