--- a/_data/players.yml
+++ b/_data/players.yml
@@ -57,7 +57,7 @@
   pp: /assets/img/pp/m.ropick-new.png
   profile-link: /players/m.ropick
   
-- name: a.mansyur
+- name: a.mansur
   no-punggung: 7
   role: forward
   pp: /assets/img/pp/a.mansyur-new.png
