--- a/_data/players.yml
+++ b/_data/players.yml
@@ -61,7 +61,7 @@
   no-punggung: 7
   role: forward
   pp: /assets/img/pp/a.mansyur-new.png
-  profile-link: /players/a.mansyur
+  profile-link: /players/a.mansur
   
 - name: danil ardiansyah
   no-punggung: 8
