--- a/_data/players_2022.yml
+++ b/_data/players_2022.yml
@@ -334,7 +334,7 @@
   position: management
   role: management
   pp:
-  profile-link: /players/noname
+  profile-link: /players/no.name
   
 - name: azriel. i
   no-punggung: 42
