--- a/_data/assets.yml
+++ b/_data/assets.yml
@@ -1,30 +1,12 @@
 logo:
   logo-1:
-    - name: logo 1, stroke white, background black.
-      img: /assets/img/logo/logo-1_v2_stroke-white_bg-black.png
+    - name: logo 1
+      img: /assets/img/logo/logo-1_v4.png
       img-type: png
-    - name: logo 1, stroke white, background transparent.
-      img: /assets/img/logo/logo-1_v2_stroke-white_bg-transparent.png
-      img-type: png
-    - name: logo 1, stroke white, background black.
-      img: /assets/img/logo/logo-1_v2_stroke-white_bg-black.svg
-      img-type: svg
-    - name: logo 1, stroke white, background transparent.
-      img: /assets/img/logo/logo-1_v2_stroke-white_bg-transparent.svg
-      img-type: svg
   logo-2:
-    - name: logo 2, stroke black, background white.
-      img: /assets/img/logo/logo-2_v2_stroke-black_bg-white.png
+    - name: logo 2
+      img: /assets/img/logo/logo-2_v4.png
       img-type: png
-    - name: logo 2, stroke black, background transparent.
-      img: /assets/img/logo/logo-2_v2_stroke-black_bg-transparent.png
-      img-type: png
-    - name: logo 2, stroke black, background white.
-      img: /assets/img/logo/logo-2_v2_stroke-black_bg-white.svg
-      img-type: svg
-    - name: logo 2, stroke black. background transparent.
-      img: /assets/img/logo/logo-2_v2_stroke-black_bg-transparent.svg
-      img-type: svg
 photos:
   - name: full team
     img: /assets/img/tesafc-full-team-3.png
