--- a/_data/players_2022.yml
+++ b/_data/players_2022.yml
@@ -93,8 +93,8 @@
   
 - name: igit
   no-punggung: 5
-  position: midfielder
-  role: cmf
+  position: forward
+  role: cf
   pp:
   profile-link: /players/igit
   
