--- a/_data/players_2022.yml
+++ b/_data/players_2022.yml
@@ -4,6 +4,7 @@
   no-punggung: 12
   position: goalkeeper
   role: gk
+  teams: tesafc-senior
   pp:
   profile-link: /players/bang.jak
   
@@ -11,6 +12,7 @@
   no-punggung: 3
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/fahri.husaini
 
@@ -18,6 +20,7 @@
   no-punggung: 2
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/ifan
   
@@ -25,6 +28,7 @@
   no-punggung: 5
   position: forward
   role: cf
+  teams: putri-tesafc
   pp:
   profile-link: /players/igit
   
@@ -32,6 +36,7 @@
   no-punggung: 2
   position: midfielder
   role: amf
+  teams: tesafc-senior
   pp:
   profile-link: /players/ki
   
@@ -39,6 +44,7 @@
   no-punggung: 2
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/mekuy
   
@@ -46,6 +52,7 @@
   no-punggung: 3
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/asep.m
   
@@ -53,6 +60,7 @@
   no-punggung: 4
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/azriel
   
@@ -60,6 +68,7 @@
   no-punggung: 4
   position: defender
   role: rb
+  teams: tesafc-senior
   pp:
   profile-link: /players/faisal
   
@@ -67,6 +76,7 @@
   no-punggung: 4
   position: midfielder
   role: cmf
+  teams: putri-tesafc
   pp:
   profile-link: /players/yani
   
@@ -74,6 +84,7 @@
   no-punggung: 5
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/aditya.w
   
@@ -81,6 +92,7 @@
   no-punggung: 6
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/ditya
   
@@ -88,6 +100,7 @@
   no-punggung: 6
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/masdeka
   
@@ -95,6 +108,7 @@
   no-punggung: 7
   position: forward
   role: cf
+  teams: tesafc-senior
   pp:
   profile-link: /players/a.mansur
   
@@ -102,6 +116,7 @@
   no-punggung: 7
   position: midfielder
   role: amf
+  teams: tesafc-junior
   pp:
   profile-link: /players/alby.h.r
   
@@ -109,6 +124,7 @@
   no-punggung: 7
   position: midfielder
   role: amf
+  teams: tesafc-senior
   pp:
   profile-link: /players/m.ropick
   
@@ -116,6 +132,7 @@
   no-punggung: 8
   position: forward
   role: cf
+  teams: tesafc-senior
   pp:
   profile-link: /players/hajji
   
@@ -123,6 +140,7 @@
   no-punggung: 8
   position: forward
   role: lwf
+  teams: tesafc-senior
   pp:
   profile-link: /players/zybon
   
@@ -130,6 +148,7 @@
   no-punggung: 9
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/fauzan
   
@@ -138,6 +157,7 @@
   no-punggung: 10
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/hgialfhri
   
@@ -145,6 +165,7 @@
   no-punggung: 10
   position: midfielder
   role: amf
+  teams: tesafc-senior
   pp:
   profile-link: /players/saca
   
@@ -152,6 +173,7 @@
   no-punggung: 11
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/maulana
   
@@ -159,6 +181,7 @@
   no-punggung: 12
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/azilpati
   
@@ -166,6 +189,7 @@
   no-punggung: 12
   position: defender
   role: lb
+  teams: tesafc-junior
   pp:
   profile-link: /players/bilal
   
@@ -173,6 +197,7 @@
   no-punggung: 13
   position: forward
   role: rwf
+  teams: tesafc-junior
   pp:
   profile-link: /players/pandu.malik.i
   
@@ -180,6 +205,7 @@
   no-punggung: 14
   position: forward
   role: cf
+  teams: tesafc-senior
   pp:
   profile-link: /players/june.story
   
@@ -187,6 +213,7 @@
   no-punggung: 15
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/irfan.oktavian
   
@@ -194,6 +221,7 @@
   no-punggung: 16
   position: forward
   role: cf
+  teams: tesafc-senior
   pp:
   profile-link: /players/ardiansyah
   
@@ -201,6 +229,7 @@
   no-punggung: 16
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/aril.a
   
@@ -208,6 +237,7 @@
   no-punggung: 17
   position: forward
   role: rwf
+  teams: tesafc-senior
   pp:
   profile-link: /players/röbbani
   
@@ -215,6 +245,7 @@
   no-punggung: 18
   position: forward
   role: rwf
+  teams: tesafc-junior
   pp:
   profile-link: /players/angga.feb
   
@@ -222,6 +253,7 @@
   no-punggung: 18
   position: defender
   role: lb
+  teams: tesafc-senior
   pp:
   profile-link: /players/gibran
   
@@ -229,6 +261,7 @@
   no-punggung: 18
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/haidar.albar
   
@@ -236,6 +269,7 @@
   no-punggung: 19
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/yasya
   
@@ -243,6 +277,7 @@
   no-punggung: 20
   position: goalkeeper
   role: gk
+  teams: tesafc-senior
   pp:
   profile-link: /players/abang
   
@@ -250,6 +285,7 @@
   no-punggung: 21
   position: defender
   role: lb
+  teams: tesafc-senior
   pp:
   profile-link: /players/r.septiannanda
   
@@ -257,6 +293,7 @@
   no-punggung: 21
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/sugih
 
@@ -264,6 +301,7 @@
   no-punggung: 22
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/g.pratama
   
@@ -271,6 +309,7 @@
   no-punggung: 23
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/farhan.husaini
   
@@ -278,6 +317,7 @@
   no-punggung: 25
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/m.azril
   
@@ -285,6 +325,7 @@
   no-punggung: 27
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/jafra
   
@@ -292,6 +333,7 @@
   no-punggung: 27
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/prabu
   
@@ -299,6 +341,7 @@
   no-punggung: 30
   position: midfielder
   role: cmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/k.mal
   
@@ -306,6 +349,7 @@
   no-punggung: 32
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/aang
   
@@ -320,6 +364,7 @@
   no-punggung: 42
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/azriel.i
   
@@ -327,6 +372,7 @@
   no-punggung: 44
   position: defender
   role: cb
+  teams: tesafc-senior
   pp:
   profile-link: /players/angga.nugraha
   
@@ -334,6 +380,7 @@
   no-punggung: 45
   position: goalkeeper
   role: gk
+  teams: tesafc-junior
   pp:
   profile-link: /players/adzim
   
@@ -341,6 +388,7 @@
   no-punggung: 49
   position: defender
   role: rb
+  teams: tesafc-senior
   pp:
   profile-link: /players/bustin.jieber
   
@@ -348,6 +396,7 @@
   no-punggung: 69
   position: forward
   role: rwf
+  teams: tesafc-senior
   pp:
   profile-link: /players/habiel
   
@@ -355,6 +404,7 @@
   no-punggung: 70
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/ad_prmn
   
@@ -369,6 +419,7 @@
   no-punggung: 88
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/gusmul
   
@@ -376,6 +427,7 @@
   no-punggung: 89
   position: midfielder
   role: cmf
+  teams: tesafc-junior
   pp:
   profile-link: /players/sukma
   
@@ -383,6 +435,7 @@
   no-punggung: 94
   position: defender
   role: lb
+  teams: tesafc-senior
   pp:
   profile-link: /players/septian.moy
   
@@ -390,6 +443,7 @@
   no-punggung: 95
   position: midfielder
   role: dmf
+  teams: tesafc-senior
   pp:
   profile-link: /players/jocker
   
@@ -398,6 +452,7 @@
   no-punggung: 96
   position: goalkeeper
   role: gk
+  teams: tesafc-senior
   pp:
   profile-link: /players/aldo
   
@@ -405,6 +460,7 @@
   no-punggung: 96
   position: goalkeeper
   role: gk
+  teams: tesafc-senior
   pp:
   profile-link: /players/m.fajar.syamsii
   
@@ -412,6 +468,7 @@
   no-punggung: 99
   position: forward
   role: cf
+  teams: tesafc-junior
   pp:
   profile-link: /players/romi.al-gofar
   
